--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
-        applicationId "com.koreantv.tvonline"
+        applicationId "com.iseetv.tvonline"
         manifestPlaceholders = [manifestApplicationId: "${applicationId}",
-                                onesignal_app_id: "33062a8e-431c-4502-ac83-845a1a751e9c",
+                                onesignal_app_id: "9d0b488d-3e45-40da-b50c-e4694076f614",
                                 onesignal_google_project_number: "REMOTE"]
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -31,7 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.browser:browser:1.2.0'
-    implementation 'androidx.exifinterface:exifinterface:1.1.0'
+    implementation 'androidx.exifinterface:exifinterface:1.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -45,6 +46,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.onesignal:OneSignal:3.12.4@aar'
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.2'
     implementation 'com.github.ixiDev:GDPRChecker:v0.2'
     implementation 'com.google.android.ads.consent:consent-library:1.0.8'
